<resources>
    <string name="app_name">ZerokitDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_title_hint">Title</string>
    <string name="todo_description_hint">Description</string>
    <string name="todo_save">Save</string>
    <string name="alert_empty">Empty field</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="password_confirm_hint">Password confirm</string>
    <string name="alert_not_identical">Given passwords do not match</string>
    <string name="alert_no_user">\"No user id found for this user alias\"</string>
    <string name="table_list_header">Add table to your list or add new one</string>
    <string name="new_table">New table</string>
    <string name="search_table_menu">Search table</string>
    <string name="sign_out_menu">Sign out</string>
    <string name="remember_me">Remember me</string>
    <string name="copy_userid">Copy UserId</string>
    <string name="create_invitation">Create Invitation</string>
    <string name="share">Share</string>
    <string name="share_success">Share successed</string>
    <string name="alert_already_registered">Already registered with this username</string>
    <string name="remove_table">Remove Table</string>
    <string name="message_hint">Message</string>
    <string name="invite_title">Create invitation</string>
    <string name="create_btn">Create</string>
    <string name="cancel_btn">Cancel</string>
    <string name="filter_invitation">Filter invitation</string>
    <string name="accept_btn">Accept</string>
    <string name="invitation_msg">Invitation message:</string>
    <string name="invite_accept">Invitation</string>
    <string name="accept_success">Success</string>
    <string name="invitation_success">Invitation successed, inivitation link is on your clipboard now</string>
    <string name="refresh_table">Refresh Table</string>
    <string name="alert_no_table_added">There are no added table</string>
    <string name="alert_decrypt_failed">Unable to decrypt</string>
</resources>
