<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context="com.wanari.zerokit.zerokitdemo.fragments.TodoDetailFragment"
            android:fillViewport="true"
            android:background="@android:color/white">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/todoDetailTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/todoDetailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/todo_title_hint"
                    android:imeOptions="actionNext"
                    android:textSize="18sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/todoDetailDescriptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/todoDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="5"
                    android:gravity="top"
                    android:hint="@string/todo_description_hint"
                    android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/todoDetailSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_save"/>
    </LinearLayout>
</ScrollView>
