<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

            <com.tresorit.zerokit.PasswordEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/remembarMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/remember_me"/>

        <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/sign_in_btn"/>
    </LinearLayout>
</ScrollView>